<resources>
    <string name="app_name">Countries</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="en">EN</string>
    <string name="filter">Filter</string>
    <string name="explore">Explore</string>
    <string name="population">Population: </string>
    <string name="_45345">45345</string>
    <string name="region">Region:  </string>
    <string name="europe">Europe:  </string>
    <string name="capital">Capital:  </string>
    <string name="motto">Motto: </string>
    <string name="virtus_unita_fortior">Virtus unita fortior</string>
    <string name="official_language">Official language:  </string>
    <string name="catalan">Catalan</string>
    <string name="ethic_group">Ethic group:</string>
    <string name="andorran_spanish_portuguese"> Andorran, Spanish, Portuguese</string>
    <string name="religion">Religion:  </string>
    <string name="christianity">Christianity</string>
    <string name="government">Government:  </string>
    <string name="parliamentary_democracy">Parliamentary democracy</string>
    <string name="independence">Independence:  </string>
    <string name="_8th_september_1278">8th September, 1278</string>
    <string name="area">Area:  </string>
    <string name="_467_63_km2">467.63 km2</string>
    <string name="currency">Currency:  </string>
    <string name="euro">Euro</string>
    <string name="us_3_400_billion">US$3.400 billion</string>
    <string name="gdp">GDP:  </string>
    <string name="tutc_01">\tUTC+01</string>
    <string name="time_zone">Time zone:  </string>
    <string name="date_format">Date format:  </string>
    <string name="dialling_code">Dialling code:  </string>
    <string name="driving_side">Driving side:  </string>
    <string name="right">Right</string>
    <string name="_376">+376</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="andora_la_vella">Andora la Vella</string>
    <string name="ghana">Ghana</string>
    <string name="takoradi">Takoradi</string>
    <string name="retry">retry</string>
</resources>